--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,6 @@
     "BooksDB": "Server=tcp:ascreaditdbserver.database.windows.net,1433;Initial Catalog=read-it-db;Persist Security Info=False;User ID=ascadmin;Password=Ascsqladmin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Redis": {
-    "ConnectionString": "2YteGeYCwb8JRbjORXHmEMLqmpmEpxIfoAzCaJqzL8I=@asc-readit-redis.redis.cache.windows.net:6380?ssl=true"
+    "ConnectionString": "2YteGeYCwb8JRbjORXHmEMLqmpmEpxIfoAzCaJqzL8I=@asc-readit-redis.redis.cache.windows.net:6380"
   }
 }
